made some corrections to header component

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header__starter">
                     <div class="header__starter__container">
                         <span class="header__starter__text-1">Sell your products on our platform</span>
-                        <span class="header__starter__text-2">Become a seller</span>
+                        <a href="#" class="header__starter__text-2">Become a seller</a>
                     </div>
                 </div>
             </div>
@@ -30,15 +30,24 @@
                     <div class="search-container">
                         <img class="search-icon" src="./assets/images/icons//Icon-search.svg" alt="Searcg icon">
                         <input class="input input__search" type="search" placeholder="Search here">
-                        <div class="category__container">
-                            <div class="category__part-1">
-                                <div class="vertical-line"></div>
-                                <button class="category__btn" href="#">
-                                    <span class="category__btn__text">ყველა კატეგორია</span>
+                        <div class="select__container">
+                            <select class="category__select">
+                                <option class="option" value="">
+                                    <span class="selector-text">ყველა კატეგორია</span>
                                     <img class="arrow-down-icon" src="/assets/images/icons//Icon-arrow-ios-right.svg"
                                         alt="Arrow down">
-                                </button>
-                            </div>
+                                </option>
+                                <option value="">Category 1</option>
+                                <option value="">Category 2</option>
+                                <option value="">Category 3</option>
+                                <option value="">Category 4</option>
+                                <option value="">Category 5</option>
+                                <option value="">Category 6</option>
+                                <option value="">Category 7</option>
+                                <option value="">Category 8</option>
+                                <option value="">Category 9</option>
+                                <option value="">Category 10</option>
+                            </select>
                         </div>
                     </div>
                     <div class="btn__container">
