adjusted category items

--- a/index.html
+++ b/index.html
@@ -678,38 +678,62 @@
                 <div class="section-container categories">
                     <a class="category__link" href="#">
                         <div class="category__item">
-                            <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
-                            <p class="category__name">ტექნიკა</p>
+                            <div class="category__img">
+                                <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
+                            </div>
+                            <div class="category__name__container">
+                                <p class="category__name">ტექნიკა</p>
+                            </div>
                         </div>
                     </a>
                     <a class="category__link" href="#">
                         <div class="category__item">
-                            <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
-                            <p class="category__name">თავის მოვლა და ჯანმრთელობა</p>
+                            <div class="category__img">
+                                <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
+                            </div>
+                            <div class="category__name__container">
+                                <p class="category__name">თავის მოვლა და ჯანმრთელობა</p>
+                            </div>
                         </div>
                     </a>
                     <a class="category__link" href="#">
                         <div class="category__item">
-                            <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
-                            <p class="category__name">ავეჯი</p>
+                            <div class="category__img">
+                                <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
+                            </div>
+                            <div class="category__name__container">
+                                <p class="category__name">ავეჯი</p>
+                            </div>
                         </div>
                     </a>
                     <a class="category__link" href="#">
                         <div class="category__item">
-                            <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
-                            <p class="category__name">სპორტი და მოგზაურობა</p>
+                            <div class="category__img">
+                                <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
+                            </div>
+                            <div class="category__name__container">
+                                <p class="category__name">სპორტი და მოგზაურობა</p>
+                            </div>
                         </div>
                     </a>
                     <a class="category__link" href="#">
                         <div class="category__item">
-                            <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
-                            <p class="category__name">ტანსაცმელი</p>
+                            <div class="category__img">
+                                <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
+                            </div>
+                            <div class="category__name__container">
+                                <p class="category__name">ტანსაცმელი</p>
+                            </div>
                         </div>
                     </a>
                     <a class="category__link" href="#">
                         <div class="category__item">
-                            <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
-                            <p class="category__name">სათამაშოები</p>
+                            <div class="category__img">
+                                <img class="category__item__img" src="assets/images/monitor@2x.png" alt="">
+                            </div>
+                            <div class="category__name__container">
+                                <p class="category__name">სათამაშოები</p>
+                            </div>
                         </div>
                     </a>
                 </div>
